# confHide

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  critical.md  package.json  todo.md
encrypted-ixs/src/: lib.rs
programs/conf_hide/: Cargo.toml
programs/conf_hide/src/: lib.rs
tests/: conf_hide.ts  conf_hide_split.ts
